# xplorer

./: .gitignore  AGENTS.md  AI_DOCS.md  BRANDING_PRIVACY_PLAN.md  GROK_IMAGE_SEARCH.md  README.md  RELEASE.md  RELEASE.windows.md  SCHEDULES_TODO.md  STABILITY_LOOP.md  VERSIONS  WINDOWS_AGENT_v0.7.0.md  X_MCP_FEATURES.md  X_MCP_MAP.md  apply.ps1  apply.sh  background_and_cronjob_system.md  build.ps1  build.sh  do-chromium-buildbox.sh  log.md
.github/workflows/: pages.yml  release.yml
branding/: app.icns  grok.icon
companion/ui/: app-view.js  app.css  app.html  app.js  apps.css  apps.html  apps.js  common.js  index.html  logs.html  logs.js  newtab-bg.js  schedules.css  schedules.html  schedules.js  search.css  search.html  search.js  settings.css  settings.html  settings.js  style.css  theme.css  toolbar.css  toolbar.html  toolbar.js  welcome.css  welcome.html  welcome.js
docs/: AGENT_API.md  BUILDING.md  UNGOOGLED.md
grok/: xbrowser-companion.toml
patches/: apply_integration.py
patches/ungoogled/: quarantine.series  series
scripts/: app_arch.sh  apply_ungoogled.ps1  apply_ungoogled.sh  check_ungoogled_patches.sh  launch_companion.sh  linux_buildbox_bootstrap.sh  linux_test_vm_setup.sh  notarize_dmg.sh  package.ps1  package.sh  package_linux.sh  package_linux_installers.sh  release_arch.sh  release_win.ps1  sign_and_notarize.sh  sign_win.ps1  smoke_native_grok.sh
sdk/: aether_mcp.py  aether_sdk.py  agent_context.py  app_delete_test.py  bkk_lax_oneway.py  companion_smoke_test.py  conversation_tab_test.py  flights_demo.py  grok_companion_server.py  grok_config.template.toml  mcp_agent_test.py  mock_x_mcp.py  parallel_demo.py  smoke_test.py  x_login_test.sh  x_oauth.py  xbrowser_mcp.py  xplorer_mcp.py  xplorer_sdk.py
sdk/companion/ui/: search.css  search.html  search.js
site/: README.md  appcast.xml  index.html  site.webmanifest  styles.css
src/chrome/browser/: xplorer_sparkle_updater.h  xplorer_sparkle_updater.mm
src/chrome/browser/agent_gateway/: BUILD.gn  agent_gateway.cc  agent_gateway.h  agent_session.cc  agent_session.h  app_store.cc  app_store.h  browser_api.cc  browser_api.h  focus_arbiter.cc  focus_arbiter.h  grok_companion_launcher.cc  grok_companion_launcher.h  grok_native.cc  grok_native.h  grok_provisioner.cc  grok_provisioner.h  scheduler.cc  scheduler.h  tab_ownership.cc  tab_ownership.h  tab_screenshot.cc  tab_screenshot.h  update_checker.cc  update_checker.h  xplorer_paths.cc  xplorer_paths.h
src/chrome/browser/grok_companion/: BUILD.gn  grok_companion_util.cc  grok_companion_util.h  grok_fab.cc  grok_fab.h  grok_toolbar_icon.cc  grok_toolbar_icon.h  grok_web_bar.cc  grok_web_bar.h
src/chrome/browser/ui/views/xplorer/: xplorer_agent_tab_grouper.cc  xplorer_agent_tab_grouper.h  xplorer_bookmark_tab_observer.cc  xplorer_bookmark_tab_observer.h  xplorer_bookmark_tabs.cc  xplorer_bookmark_tabs.h  xplorer_scheduled_task_tabs.cc  xplorer_scheduled_task_tabs.h  xplorer_settings_nav.cc  xplorer_settings_nav.h  xplorer_sidebar_bookmarks_view.cc  xplorer_sidebar_bookmarks_view.h  xplorer_sidebar_chrome_view.cc  xplorer_sidebar_chrome_view.h  xplorer_sidebar_prefs.cc  xplorer_sidebar_prefs.h  xplorer_sidebar_row_button.cc  xplorer_sidebar_row_button.h  xplorer_sidebar_scheduled_view.cc  xplorer_sidebar_scheduled_view.h  xplorer_sidebar_section_label.cc  xplorer_sidebar_section_label.h  xplorer_toolbar_icons.cc  xplorer_toolbar_icons.h  xplorer_toolbar_pill_button.cc  xplorer_toolbar_pill_button.h  xplorer_toolbar_placement.cc  xplorer_toolbar_placement.h  xplorer_toolbar_view.cc  xplorer_toolbar_view.h
