# Copyright 2026 The Aether Authors.

source_set("agent_gateway") {
  sources = [
    "agent_gateway.cc",
    "agent_gateway.h",
    "agent_session.cc",
    "agent_session.h",
    "browser_api.cc",
    "browser_api.h",
    "grok_companion_launcher.cc",
    "grok_companion_launcher.h",
    "grok_native.cc",
    "grok_native.h",
    "tab_ownership.cc",
    "tab_ownership.h",
  ]
  deps = [
    "//base",
    "//chrome/browser/profiles",
    "//chrome/browser/themes",
    "//chrome/browser/ui",
    "//components/bookmarks/browser",
    "//components/history/core/browser",
    "//components/tab_groups",
    "//content/public/browser",
    "//net",
    "//ui/base",
    "//url",
  ]
}
