# Copyright 2026 The Aether Authors.

source_set("agent_gateway") {
  sources = [
    "agent_gateway.cc",
    "agent_gateway.h",
    "app_store.cc",
    "app_store.h",
    "agent_session.cc",
    "agent_session.h",
    "browser_api.cc",
    "browser_api.h",
    "grok_companion_launcher.cc",
    "grok_companion_launcher.h",
    "grok_native.cc",
    "grok_native.h",
    "tab_ownership.cc",
    "tab_ownership.h",
    "tab_screenshot.cc",
    "tab_screenshot.h",
  ]
  deps = [
    "//base",
    "//chrome/browser/profiles",
    "//chrome/browser/themes",
    "//chrome/browser/ui",
    "//ui/snapshot",
    "//components/bookmarks/browser",
    "//components/history/core/browser",
    "//components/tab_groups",
    "//content/public/browser",
    "//net",
    "//skia",
    "//ui/base",
    "//ui/gfx/codec",
    "//ui/gfx/geometry",
    "//url",
  ]
}
