# Copyright 2026 The Xplorer Authors.

source_set("agent_gateway") {
  sources = [
    "agent_gateway.cc",
    "agent_gateway.h",
    "app_store.cc",
    "app_store.h",
    "agent_session.cc",
    "agent_session.h",
    "browser_api.cc",
    "browser_api.h",
    "focus_arbiter.cc",
    "focus_arbiter.h",
    "grok_companion_launcher.cc",
    "grok_companion_launcher.h",
    "grok_native.cc",
    "grok_native.h",
    "grok_provisioner.cc",
    "grok_provisioner.h",
    "scheduler.cc",
    "scheduler.h",
    "tab_ownership.cc",
    "tab_ownership.h",
    "tab_screenshot.cc",
    "tab_screenshot.h",
    "update_checker.cc",
    "update_checker.h",
    "xplorer_paths.cc",
    "xplorer_paths.h",
  ]
  deps = [
    "//base",
    "//chrome/browser/lifetime",
    "//chrome/browser/profiles",
    "//chrome/browser/themes",
    "//chrome/browser/ui",
    "//ui/snapshot",
    "//components/bookmarks/browser",
    "//components/history/core/browser",
    "//components/tab_groups",
    "//components/version_info",
    "//content/public/browser",
    "//crypto",
    "//net",
    "//services/network/public/cpp",
    "//skia",
    "//third_party/zlib/google:zip",
    "//ui/base",
    "//ui/gfx/codec",
    "//ui/gfx/geometry",
    "//url",
  ]
}
