# Copyright 2026 The Xplorer Authors.

source_set("grok_companion") {
  sources = [
    "grok_companion_util.cc",
    "grok_companion_util.h",
    "grok_fab.cc",
    "grok_fab.h",
    "grok_web_bar.cc",
    "grok_web_bar.h",
  ]
  deps = [
    "//base",
    "//chrome/common",
    "//chrome/browser/agent_gateway",
    "//chrome/browser/profiles",
    "//chrome/browser/themes",
    "//chrome/browser/ui",
    "//components/tabs:public",
    "//chrome/browser/ui/views/side_panel",
    "//content/public/browser",
    "//ui/base",
    "//ui/gfx",
    "//ui/views",
    "//url",
  ]
}